fix:clean code 1
Signed-off-by: Chen Kai <281165273grape@gmail.com>